# digital-priestess

./: .env.example  .gitignore  README.md  run.sh
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
backend/: pyproject.toml
backend/app/: __init__.py  main.py  models.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  config.py
backend/app/ingestion/: __init__.py  extractors.py  scanner.py
backend/app/persona/: __init__.py  prompts.py
backend/app/rag/: __init__.py  chunking.py  lm_studio.py  retrieval.py  service.py
backend/app/storage/: __init__.py  sqlite_index.py
backend/tests/: test_api_routes.py  test_chat_service.py  test_chunking.py  test_config.py  test_extractors.py  test_persona.py  test_retrieval.py  test_scanner.py  test_storage_index.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
