[project]
name = "digital-priestess-backend"
version = "0.1.0"
description = "Local RAG backend for the Digital Priestess archive app."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0"
]
ingest = [
    "beautifulsoup4>=4.12.0",
    "pillow>=10.4.0",
    "pypdf>=4.3.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
    "striprtf>=0.0.26"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]